# MQA-assembler

./: .gitignore  LICENSE  README.md  asm_types.py  assembler.py  compiler.py  instruction_set.mqi  main.py  mqis  precompiler.py  pyproject.toml  test_program.mqa  tokenizer.py
examples/: display.mqas  fibonacci.mqas  filetest.mqas  for_loops.mqas  loop_test.mqas  stack.mqas  strings.mqas  syntax_test.mqas
mqa_src/: mandelbrot_set.mqas  test_program.mqas
src/: __init__.py  asm_types.py  compiler.py  tokenizer.py
src/mqa/: __init__.py  __main__.py  _asm_types.py  _binary_constructor.py  _compiler.py  _main.py  _mqis.py  _tokenizer.py
